Increase material pipe height

--- a/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW1.xaml
@@ -8,8 +8,8 @@
              x:Class="Prevu.Synoptics.HW1" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
   <Grid Margin="-4,5,4,-5">
-    <Labels:Pipe HorizontalAlignment="Left" Margin="168,66,0,0" VerticalAlignment="Top" Width="33" StatusComponent="231-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="171,93,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="58" StatusComponent="231-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="168,66,0,0" VerticalAlignment="Top" Width="37" StatusComponent="231-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="170,92,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="60" StatusComponent="231-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -19,11 +19,11 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="532,357,0,0" VerticalAlignment="Top" Width="96" StatusComponent="330-23-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="780,357,0,0" VerticalAlignment="Top" Width="50" StatusComponent="330-02-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Center" Margin="0,357,0,0" VerticalAlignment="Top" Width="90" StatusComponent="330-23-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="532,357,0,0" VerticalAlignment="Top" Width="96" StatusComponent="330-23-CV1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="783,357,0,0" VerticalAlignment="Top" Width="50" StatusComponent="330-02-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Center" Margin="0,357,0,0" VerticalAlignment="Top" Width="90" StatusComponent="330-23-CV1" PipeHeight="Medium"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="866,111,0,0" VerticalAlignment="Top" Width="31" Color="Water" StatusComponent="330-02-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="430,152,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="58" StatusComponent="322-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="426,148,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="66" StatusComponent="322-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -33,7 +33,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="916,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="44" StatusComponent="330-02-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="916,73,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="44" StatusComponent="330-02-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -43,8 +43,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="979,94,0,0" VerticalAlignment="Top" Width="45" StatusComponent="362-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="926,189,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="192" StatusComponent="362-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="979,94,0,0" VerticalAlignment="Top" Width="48" StatusComponent="362-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="926,189,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="192" StatusComponent="362-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -55,7 +55,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="1079,347,0,0" VerticalAlignment="Top" Width="79" StatusComponent="376-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1046,314,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="70" StatusComponent="376-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1051,299,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="60" StatusComponent="376-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -65,8 +65,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1174,0,0,0" VerticalAlignment="Center" Width="89" StatusComponent="376-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1157,266,0,0" VerticalAlignment="Top" Color="Water" Width="70" StatusComponent="380-21-CV1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1174,0,0,0" VerticalAlignment="Center" Width="89" StatusComponent="376-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1158,266,0,0" VerticalAlignment="Top" Color="Water" Width="69" StatusComponent="380-21-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="1120,304,0,0" VerticalAlignment="Top" Color="Water" Width="80" RenderTransformOrigin="0.5,0.5" Height="5" StatusComponent="380-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -77,8 +77,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="826,53,0,0" VerticalAlignment="Top" Width="114" StatusComponent="330-02-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="674,205,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="308" StatusComponent="330-02-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="823,53,0,0" VerticalAlignment="Top" Width="120" StatusComponent="330-02-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="674,205,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="308" StatusComponent="330-02-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -101,7 +101,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="263,125,0,0" VerticalAlignment="Top" Width="196" StatusComponent="322-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="263,120,0,0" VerticalAlignment="Top" Width="196" StatusComponent="322-01-MA1" PipeHeight="Medium"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="988,574,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="879,684,0,0" VerticalAlignment="Top" Width="221" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1">
       <Labels:Pipe.RenderTransform>
@@ -192,7 +192,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="278,496,0,0" VerticalAlignment="Top" Width="213" Color="Water" StatusComponent="370-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="730,598,0,0" VerticalAlignment="Top" Color="Water" Width="41" StatusComponent="352-21-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1155,401,0,0" VerticalAlignment="Top" Width="38" StatusComponent="376-01-MA1" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1155,401,0,0" VerticalAlignment="Top" Width="38" StatusComponent="376-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -379,11 +379,11 @@
             VerticalAlignment="Top" 
             ComponentName="330-01-MA1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="725,283,0,0" 
+            Margin="725,388,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-02-MA1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="602,283,0,0" 
+            Margin="602,388,0,0" 
             VerticalAlignment="Top" 
             ComponentName="330-23-CV1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
