--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -18,9 +18,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="917,208,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="570,268,0,0" VerticalAlignment="Top" Width="184" StatusComponent="430-05-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="724,294,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="56" StatusComponent="430-05-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="917,208,0,0" VerticalAlignment="Top" Width="61" StatusComponent="526-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="570,266,0,0" VerticalAlignment="Top" Width="187" StatusComponent="430-05-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="723,291,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="58" StatusComponent="430-05-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -30,8 +30,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="104,88,0,0" VerticalAlignment="Top" Width="158" StatusComponent="376-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="162,185,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="376-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="104,88,0,0" VerticalAlignment="Top" Width="158" StatusComponent="376-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="160,183,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="200" StatusComponent="376-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -63,7 +63,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="948,233,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="53" StatusComponent="526-01-MA1" Height="8">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="947,232,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="55" StatusComponent="526-01-MA1" Height="8" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -73,7 +73,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="834,484,0,0" VerticalAlignment="Top" Width="134" StatusComponent="534-01-MA1"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="874,486,0,0" VerticalAlignment="Top" Width="94" StatusComponent="534-01-MA1" Color="Air"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="378,492,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="190" Color="ByProduct" StatusComponent="430-03-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -96,7 +96,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="330,604,0,0" VerticalAlignment="Top" Color="Water" Width="106" StatusComponent="436-07-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="118,604,0,0" VerticalAlignment="Top" Color="Water" Width="176" StatusComponent="436-07-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="884,370,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="182" StatusComponent="526-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="899,385,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="152" StatusComponent="526-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -106,8 +106,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1091,496,0,0" VerticalAlignment="Top" Width="126" StatusComponent="526-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1184,525,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="62" StatusComponent="526-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1091,496,0,0" VerticalAlignment="Top" Width="129" StatusComponent="526-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1183,524,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="526-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -117,8 +117,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1248,590,0,0" VerticalAlignment="Top" Width="62" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1252,644,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="112" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1251,590,0,0" VerticalAlignment="Top" Width="62" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1252,644,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="112" StatusComponent="526-01-MA1" VisibilitySignal="LS2" VisibilityComponent="808-21-CV1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -128,8 +128,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1122,590,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1074,638,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="100" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1119,590,0,0" VerticalAlignment="Top" Width="60" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1075,637,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="98" StatusComponent="526-01-MA1" VisibilitySignal="LS1" VisibilityComponent="808-21-CV1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -200,9 +200,9 @@
     </Machines:WaterPump>
     <Rectangle HorizontalAlignment="Left" Height="42" Margin="312,236,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
     <Machines:VS_Airlock HorizontalAlignment="Left" Margin="940,244,0,0" VerticalAlignment="Top" Height="90" Width="70"/>
-    <Machines:DV_Diverter_Y HorizontalAlignment="Left" Margin="956,440,0,0" VerticalAlignment="Top" Height="74" Width="82"/>
-    <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1028,444,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
-    <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="1164,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Machines:DV_Diverter_Y HorizontalAlignment="Left" Margin="956,442,0,0" VerticalAlignment="Top" Height="74" Width="82"/>
+    <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1028,447,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
+    <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="1165,528,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Machines:DV_Diverter_T.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
