--- a/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.GR1" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
   <Grid>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="868,226,0,0" VerticalAlignment="Top" Width="117" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="866,224,0,0" VerticalAlignment="Top" Width="119" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -18,6 +18,79 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="1032,229,0,0" VerticalAlignment="Top" Width="147" StatusComponent="231-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="591,269,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="268" StatusComponent="230-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="595,401,0,0" VerticalAlignment="Top" Width="135" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="0"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="720,139,0,0" VerticalAlignment="Top" Width="92" StatusComponent="230-01-MA1" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="785,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="44" StatusComponent="230-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="571,380,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="52" StatusComponent="230-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="847,202,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="48" StatusComponent="231-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="155,121,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="60" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="557,190,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="82" StatusComponent="228-01-MA1" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" Margin="278,154,0,0" VerticalAlignment="Top" Width="322" StatusComponent="228-01-MA1" PipeHeight="Medium"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="968,149,0,0" VerticalAlignment="Top" Color="Water" Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -28,79 +101,6 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="1032,231,0,0" VerticalAlignment="Top" Width="147" StatusComponent="231-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="593,273,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="264" StatusComponent="230-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="595,403,0,0" VerticalAlignment="Top" Width="131" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="723,141,0,0" VerticalAlignment="Top" Width="87" StatusComponent="230-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="786,160,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="42" StatusComponent="230-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="571,379,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="52" StatusComponent="230-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="847,204,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="48" StatusComponent="231-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="155,123,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="60">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="561,191,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="74" StatusComponent="228-01-MA1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="278,156,0,0" VerticalAlignment="Top" Width="322" StatusComponent="228-01-MA1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="1009,108,0,0" VerticalAlignment="Top" Color="Water" Width="63" StatusComponent="232-21-CV1"/>
     <Labels:Pipe HorizontalAlignment="Left" Margin="735,298,0,0" VerticalAlignment="Top" Color="Water" Width="128" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1">
       <Labels:Pipe.RenderTransform>
@@ -180,7 +180,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="976,489,0,0" VerticalAlignment="Top" Color="Water" Width="41" StatusComponent="352-21-CV1"/>
-    <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="128,42,0,0" VerticalAlignment="Top" Width="115" Height="120" RenderTransformOrigin="0.5,0.5">
+    <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="128,42,0,0" VerticalAlignment="Top" Width="115" Height="120" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
       <Machines:MaterialInletOutlet.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -190,12 +190,12 @@
         </TransformGroup>
       </Machines:MaterialInletOutlet.RenderTransform>
     </Machines:MaterialInletOutlet>
-    <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="149,148,0,0" VerticalAlignment="Top" Width="152"/>
-    <Machines:GR_001 HorizontalAlignment="Left" Margin="496,226,0,0" VerticalAlignment="Top" Height="161" Width="203"/>
-    <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="757,141,0,0" VerticalAlignment="Top" Height="125" Width="136"/>
-    <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="979,179,0,0" VerticalAlignment="Top" Height="76" Width="71"/>
-    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="540,595,0,0" VerticalAlignment="Top" Height="222" Width="374"/>
-    <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="855,477,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="158" Height="109">
+    <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="149,148,0,0" VerticalAlignment="Top" Width="152" d:IsLocked="True"/>
+    <Machines:GR_001 HorizontalAlignment="Left" Margin="496,226,0,0" VerticalAlignment="Top" Height="161" Width="203" d:IsLocked="True"/>
+    <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="757,141,0,0" VerticalAlignment="Top" Height="125" Width="136" d:IsLocked="True"/>
+    <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="979,179,0,0" VerticalAlignment="Top" Height="76" Width="71" d:IsLocked="True"/>
+    <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="540,595,0,0" VerticalAlignment="Top" Height="222" Width="374" d:IsLocked="True"/>
+    <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="855,477,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="158" Height="109" d:IsLocked="True">
       <Machines:RTF_Microfilter.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -205,7 +205,7 @@
         </TransformGroup>
       </Machines:RTF_Microfilter.RenderTransform>
     </Machines:RTF_Microfilter>
-    <Machines:WaterPump HorizontalAlignment="Left" Margin="453,671,0,0" VerticalAlignment="Top" Height="70" Width="56" RenderTransformOrigin="0.5,0.5" Color="Water">
+    <Machines:WaterPump HorizontalAlignment="Left" Margin="453,671,0,0" VerticalAlignment="Top" Height="70" Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" d:IsLocked="True">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -215,7 +215,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Left" Margin="822,328,0,0" VerticalAlignment="Top" Height="70" Width="51" RenderTransformOrigin="0.5,0.5" Color="Water">
+    <Machines:WaterPump HorizontalAlignment="Left" Margin="822,328,0,0" VerticalAlignment="Top" Height="70" Width="51" RenderTransformOrigin="0.5,0.5" Color="Water" d:IsLocked="True">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="1"/>
@@ -225,7 +225,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="532,554,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5">
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="532,554,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -235,7 +235,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,60,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5">
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="1044,60,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
