--- a/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/GR1.xaml
@@ -169,7 +169,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" Margin="794,601,0,0" VerticalAlignment="Top" Color="Water" Width="148" StatusComponent="286-01-MA1"/>
-    <Labels:Pipe HorizontalAlignment="Left" Margin="965,500,0,0" VerticalAlignment="Top" Color="Water" Width="26" RenderTransformOrigin="0.5,0.5" StatusComponent="352-21-CV1">
+    <Labels:Pipe HorizontalAlignment="Left" Margin="961,503,0,0" VerticalAlignment="Top" Color="Water" Width="34" RenderTransformOrigin="0.5,0.5" StatusComponent="352-21-CV1" Height="7">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -195,16 +195,7 @@
     <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="757,141,0,0" VerticalAlignment="Top" Height="125" Width="136" d:IsLocked="True"/>
     <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="979,179,0,0" VerticalAlignment="Top" Height="76" Width="71" d:IsLocked="True"/>
     <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="540,595,0,0" VerticalAlignment="Top" Height="222" Width="374" d:IsLocked="True"/>
-    <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="855,477,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="158" Height="109" d:IsLocked="True">
-      <Machines:RTF_Microfilter.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="-1"/>
-          <SkewTransform/>
-          <RotateTransform/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:RTF_Microfilter.RenderTransform>
-    </Machines:RTF_Microfilter>
+
     <Machines:WaterPump HorizontalAlignment="Left" Margin="453,671,0,0" VerticalAlignment="Top" Height="70" Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" d:IsLocked="True">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
@@ -312,5 +303,15 @@
       Margin="436,337,0,0" 
       VerticalAlignment="Top" 
       ComponentName="230-01-YA1"/>
+    <Machines:RTF_Microfilter HorizontalAlignment="Left" Margin="892,481,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="101">
+      <Machines:RTF_Microfilter.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:RTF_Microfilter.RenderTransform>
+    </Machines:RTF_Microfilter>
   </Grid>
 </UserControl>
