--- a/Prevu.Drawings/Machines/VSP_SeparationTank.xaml
+++ b/Prevu.Drawings/Machines/VSP_SeparationTank.xaml
@@ -6,8 +6,8 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" Width="100" Height="100">
   <Viewbox  Stretch="Uniform">
-    <Canvas Name="svg4" Width="100" Height="100">
-      <Path  Name="path2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+    <Canvas Name="svg4" Width="84" Height="42">
+      <Path  Name="path2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}" Height="38" Stretch="Fill" Canvas.Left="2" Canvas.Top="2">
         <Path.Data>
           <PathGeometry Figures="M90 33C90 31.8954 89.1046 31 88 31H12C10.8954 31 10 31.8954 10 33V50.9843C10 51.4109 10.1364 51.8263 10.3893 52.1699L22.1783 68.1856C22.5552 68.6977 23.1532 69 23.789 69H59.3993C59.8597 69 60.306 68.8412 60.6628 68.5503L89.2635 45.2413C89.7295 44.8614 90 44.2921 90 43.6909V33Z" FillRule="NonZero"/>
         </Path.Data>
