Move Drawings to folders

--- a/Prevu.Drawings/Misc/SeparationPaddle.xaml
+++ b/Prevu.Drawings/Misc/SeparationPaddle.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Prevu.Drawings.Machines.SeparationPaddle"
+﻿<UserControl x:Class="Prevu.Drawings.Misc.SeparationPaddle"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Prevu.Drawings.Machines"
+             xmlns:local="clr-namespace:Prevu.Drawings.Misc"
              mc:Ignorable="d" Width="100" Height="100">
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg4" Width="100" Height="100" Effect="{DynamicResource MaterialDesignShadowDepth1}">
