--- a/Prevu.Drawings/Misc/External.xaml
+++ b/Prevu.Drawings/Misc/External.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Prevu.Drawings.Machines.External"
+﻿<UserControl x:Class="Prevu.Drawings.Misc.External"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Prevu.Drawings.Machines"
+             xmlns:local="clr-namespace:Prevu.Drawings.Misc"
              mc:Ignorable="d" Width="100" Height="100"
              d:DesignHeight="450" d:DesignWidth="800">
   
