--- a/Prevu.Synoptics.P1010/GROUP_230.xaml
+++ b/Prevu.Synoptics.P1010/GROUP_230.xaml
@@ -1,19 +1,22 @@
-﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.DRY" mc:Ignorable="d" CacheMode="BitmapCache"
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Misc;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.GROUP_230" 
+             mc:Ignorable="d"
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
+
   <Grid>
     <Labels:Pipe HorizontalAlignment="Left" 
-      Margin="657,272,0,0" 
-      VerticalAlignment="Top" 
-      StatusComponent="548-01-MA1" 
-      VisibilityComponent="" 
-      VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="80" PipeHeight="Medium">
+                 Margin="657,272,0,0" 
+                 VerticalAlignment="Top" 
+                 StatusComponent="548-01-MA1" 
+                 VisibilityComponent="" 
+                 VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="80" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -77,10 +80,6 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-                        Margin="177,215,0,0" 
-                        VerticalAlignment="Top" 
-                        ComponentName="550-13-R1"/>
 
     <Labels:Pipe HorizontalAlignment="Left" 
                  Margin="222,316,0,0" 
@@ -88,9 +87,6 @@
                  StatusComponent="554-01-MA1" 
                  VisibilityComponent="" 
                  VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="440" PipeHeight="Medium" Color="Air"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="172,271,0,0" VerticalAlignment="Top"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="302,271,0,0" VerticalAlignment="Top"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="432,271,0,0" VerticalAlignment="Top"/>
     <Labels:Pipe HorizontalAlignment="Left" 
       Margin="88,103,0,0" 
       VerticalAlignment="Top" 
@@ -118,20 +114,20 @@
       StatusComponent="554-01-MA1" 
       VisibilityComponent="" 
       VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="174" PipeHeight="Medium"/>
+    <Labels:Pipe HorizontalAlignment="Left" 
+      Margin="540,668,0,0" 
+      VerticalAlignment="Top" 
+      StatusComponent="564-01-MA1" 
+      VisibilityComponent="" 
+      VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="440" PipeHeight="Medium" Color="Air"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="172,271,0,0" VerticalAlignment="Top"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="302,271,0,0" VerticalAlignment="Top"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="432,271,0,0" VerticalAlignment="Top"/>
     <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="805,265,0,0" VerticalAlignment="Top"/>
     <Machines:VS_Airlock HorizontalAlignment="Left" Margin="653,165,0,0" VerticalAlignment="Top"/>
     <Rectangle HorizontalAlignment="Left" Height="30" Margin="649,306,0,0" VerticalAlignment="Top" Width="104" Fill="#FFD1D1D1" RadiusX="10" RadiusY="10"/>
     <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="971,301,0,0" VerticalAlignment="Top"/>
     <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1133,614,0,0" VerticalAlignment="Top"/>
-    <Machines:VS_Airlock HorizontalAlignment="Left" Margin="972,515,0,0" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="307,215,0,0" 
-      VerticalAlignment="Top" 
-      ComponentName="550-12-R1"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="437,215,0,0" 
-      VerticalAlignment="Top" 
-      ComponentName="550-11-R1"/>
     <Rectangle HorizontalAlignment="Left" Height="90" Margin="591,226,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="#FFD1D1D1">
       <Rectangle.RenderTransform>
         <TransformGroup>
@@ -143,6 +139,48 @@
       </Rectangle.RenderTransform>
     </Rectangle>
     <Ellipse HorizontalAlignment="Left" Height="16" Margin="584,313,0,0" VerticalAlignment="Top" Width="16" Fill="#FFD1D1D1"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="490,623,0,0" VerticalAlignment="Top"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="620,623,0,0" VerticalAlignment="Top"/>
+    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="750,623,0,0" VerticalAlignment="Top"/>
+    <Rectangle HorizontalAlignment="Left" Height="90" Margin="909,578,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="#FFD1D1D1"/>
+    <Ellipse HorizontalAlignment="Left" Height="16" Margin="902,665,0,0" VerticalAlignment="Top" Width="16" Fill="#FFD1D1D1"/>
+    <Rectangle HorizontalAlignment="Left" Height="30" Margin="970,658,0,0" VerticalAlignment="Top" Width="104" Fill="#FFD1D1D1" RadiusX="10" RadiusY="10"/>
+    <Misc:MaterialInletOutlet HorizontalAlignment="Left" Margin="1330,286,0,0" VerticalAlignment="Top" Height="104" Width="62"/>
+    <Misc:DashedLineVertical HorizontalAlignment="Left" Margin="1294,285,0,0" VerticalAlignment="Top" Height="115"/>
+    <Misc:External HorizontalAlignment="Left" Margin="1266,255,0,0" VerticalAlignment="Top" Height="60" Width="60" RenderTransformOrigin="0.5,0.5">
+      <Misc:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:External.RenderTransform>
+    </Misc:External>
+    <Misc:DashedLineVertical HorizontalAlignment="Left" Margin="1294,626,0,0" VerticalAlignment="Top" Height="114"/>
+    <Misc:External HorizontalAlignment="Left" Margin="1266,713,0,0" VerticalAlignment="Top" Height="60" Width="60" RenderTransformOrigin="0.5,0.5">
+      <Misc:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:External.RenderTransform>
+    </Misc:External>
+    <Machines:VS_Airlock HorizontalAlignment="Left" Margin="971,515,0,0" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+                        Margin="177,215,0,0" 
+                        VerticalAlignment="Top" 
+                        ComponentName="550-13-R1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="307,215,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="550-12-R1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="437,215,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="550-11-R1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
       Margin="547,215,0,0" 
       VerticalAlignment="Top" 
@@ -151,25 +189,6 @@
       Margin="495,567,0,0" 
       VerticalAlignment="Top" 
       ComponentName="560-13-R1"/>
-    <Labels:Pipe HorizontalAlignment="Left" 
-      Margin="540,668,0,0" 
-      VerticalAlignment="Top" 
-      StatusComponent="564-01-MA1" 
-      VisibilityComponent="" 
-      VisibilitySignal="" RenderTransformOrigin="0.55,0.5" Width="440" PipeHeight="Medium" Color="Air"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="490,623,0,0" VerticalAlignment="Top"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="620,623,0,0" VerticalAlignment="Top"/>
-    <Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="750,623,0,0" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="625,567,0,0" 
-      VerticalAlignment="Top" 
-      ComponentName="560-12-R1"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-      Margin="755,567,0,0" 
-      VerticalAlignment="Top" 
-      ComponentName="560-11-R1"/>
-    <Rectangle HorizontalAlignment="Left" Height="90" Margin="909,578,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="#FFD1D1D1"/>
-    <Ellipse HorizontalAlignment="Left" Height="16" Margin="902,665,0,0" VerticalAlignment="Top" Width="16" Fill="#FFD1D1D1"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
       Margin="865,567,0,0" 
       VerticalAlignment="Top" 
@@ -194,35 +213,27 @@
       Margin="976,268,0,0" 
       VerticalAlignment="Top" 
       ComponentName="556-21-CV1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="625,567,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="560-12-R1"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+      Margin="755,567,0,0" 
+      VerticalAlignment="Top" 
+      ComponentName="560-11-R1"/>
+    <Misc:MaterialInletOutlet HorizontalAlignment="Left" Margin="1330,635,0,0" VerticalAlignment="Top" Height="104" Width="62"/>
+    <Misc:MaterialInletOutlet HorizontalAlignment="Left" Margin="50,56,0,0" VerticalAlignment="Top" Height="104" Width="62"/>
+    <Misc:DashedLineVertical HorizontalAlignment="Left" Margin="149,60,0,0" VerticalAlignment="Top" Height="116"/>
+    <Misc:External HorizontalAlignment="Left" Margin="121,155,0,0" VerticalAlignment="Top" Height="60" Width="60" RenderTransformOrigin="0.5,0.5">
+      <Misc:External.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Misc:External.RenderTransform>
+    </Misc:External>
 
-    <Line Height="20" />
-    <Rectangle HorizontalAlignment="Left" Height="30" Margin="970,658,0,0" VerticalAlignment="Top" Width="104" Fill="#FFD1D1D1" RadiusX="10" RadiusY="10"/>
-    <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="3,38,0,0" VerticalAlignment="Top" Height="140" Width="139"/>
-    <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1290,268,0,0" VerticalAlignment="Top" Height="140" Width="139"/>
-    <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1290,617,0,0" VerticalAlignment="Top" Height="140" Width="139"/>
-    <Rectangle HorizontalAlignment="Left" Height="79" Margin="146,69,0,0" VerticalAlignment="Top" Width="2" StrokeThickness="2" StrokeDashArray="4" Stroke="Black"/>
-    <Machines:External HorizontalAlignment="Left" Margin="117,137,0,0" VerticalAlignment="Top" Height="60" Width="60"/>
-    <Rectangle HorizontalAlignment="Left" Height="54" Margin="1295,308,0,0" VerticalAlignment="Top" Width="2" StrokeThickness="2" StrokeDashArray="4" Stroke="Black"/>
-    <Rectangle HorizontalAlignment="Left" Height="55" Margin="1295,659,0,0" VerticalAlignment="Top" Width="2" StrokeThickness="2" StrokeDashArray="4" Stroke="Black"/>
-    <Machines:External HorizontalAlignment="Left" Margin="1266,255,0,0" VerticalAlignment="Top" Height="60" Width="60" RenderTransformOrigin="0.5,0.5">
-      <Machines:External.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="180"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:External.RenderTransform>
-    </Machines:External>
-    <Machines:External HorizontalAlignment="Left" Margin="1266,713,0,0" VerticalAlignment="Top" Height="60" Width="60" RenderTransformOrigin="0.5,0.5">
-      <Machines:External.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="180"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:External.RenderTransform>
-    </Machines:External>
   </Grid>
 </UserControl>
