--- a/Prevu.Drawings/Machines/Cabinets/QX_LongElectricalCabinet.xaml
+++ b/Prevu.Drawings/Machines/Cabinets/QX_LongElectricalCabinet.xaml
@@ -47,7 +47,7 @@
         <RectangleGeometry  x:Key="clip0_429_356" Rect="0, 0, 100, 35"/>
       </Canvas.Resources>
       <Canvas Name="g116" Clip="{StaticResource clip0_429_356}">
-        <Rectangle  Canvas.Left="2" Canvas.Top="33" Width="97" Height="2" RadiusX="0.530303" RadiusY="0.530303" Name="rect2" Fill="#FF546E7A"/>
+        <Rectangle  Canvas.Left="2" Canvas.Top="32" Width="97" Height="3" RadiusX="0.530303" RadiusY="0.530303" Name="rect2" Fill="#FF546E7A"/>
         <Canvas Name="g6" Effect="{StaticResource MaterialDesignShadowDepth1}">
           <Rectangle  Canvas.Left="1" Canvas.Top="1" Width="25" Height="32" RadiusX="0.530303" RadiusY="0.530303" Name="rect4" Fill="{StaticResource paint0_linear_429_356}"/>
         </Canvas>
@@ -133,7 +133,7 @@
             </Path.Data>
           </Path>
         </Canvas>
-        <Canvas Name="g102" Effect="{StaticResource filter6_d_429_356}">
+        <Canvas Name="g102" Effect="{StaticResource MaterialDesignShadowDepth1}">
           <Path  Name="path96" Fill="#FFB0BEC5">
             <Path.Data>
               <PathGeometry Figures="M73.3606 19.8805C73.3773 19.8209 73.3862 19.758 73.3862 19.6931C73.3862 19.3103 73.0759 19 72.6931 19C72.3103 19 72 19.3103 72 19.6931C72 19.7604 72.0096 19.8255 72.0275 19.887C72.0281 19.8917 72.0265 19.8823 72.0275 19.887L72.5239 22.3256C72.5616 22.5105 72.8258 22.5105 72.8635 22.3256L73.3606 19.8805C73.36 19.8873 73.362 19.8736 73.3606 19.8805Z" FillRule="NonZero"/>
@@ -150,7 +150,7 @@
             </Path.Data>
           </Path>
         </Canvas>
-        <Canvas Name="g110" Effect="{StaticResource filter7_d_429_356}">
+        <Canvas Name="g110" Effect="{StaticResource MaterialDesignShadowDepth1}">
           <Path  Name="path104" Fill="#FFB0BEC5">
             <Path.Data>
               <PathGeometry Figures="M77.3606 19.8805C77.3773 19.8209 77.3862 19.758 77.3862 19.6931C77.3862 19.3103 77.0759 19 76.6931 19C76.3103 19 76 19.3103 76 19.6931C76 19.7604 76.0096 19.8255 76.0275 19.887C76.0281 19.8917 76.0265 19.8823 76.0275 19.887L76.5239 22.3256C76.5616 22.5105 76.8258 22.5105 76.8635 22.3256L77.3606 19.8805C77.36 19.8873 77.362 19.8736 77.3606 19.8805Z" FillRule="NonZero"/>
@@ -167,7 +167,7 @@
             </Path.Data>
           </Path>
         </Canvas>
-        <Canvas Name="g114" Effect="{StaticResource filter8_d_429_356}">
+        <Canvas Name="g114" Effect="{StaticResource MaterialDesignShadowDepth1}">
           <Rectangle  Width="100" Height="2" RadiusX="0.530303" RadiusY="0.530303" Name="rect112" Fill="#FFB0BEC5"/>
         </Canvas>
       </Canvas>
