--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -6,13 +6,11 @@
         xmlns:Synoptics="clr-namespace:Prevu.Synoptics;assembly=Prevu.Synoptics"
         x:Class="Test.MainWindow"
         mc:Ignorable="d" Background="{DynamicResource MaterialDesignPaper}"
-        Title="MainWindow" Height="746" Width="1600">
+        Title="MainWindow" Height="900" Width="1600">
   
   <ScrollViewer>
     <StackPanel>
-      <Synoptics:GR1/>
-      <Synoptics:HW1/>
-      <Synoptics:HW2/>
+      <Synoptics:GROUP_230/>
       <Synoptics:PlantView/>
     </StackPanel>    
   </ScrollViewer>
