Test ACS-PMT added 6 new comps

--- a/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/HW2.xaml
@@ -332,16 +332,28 @@
             VerticalAlignment="Top" 
             ComponentName="430-05-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-        Margin="1274,64,0,0" 
+        Margin="1050,66,0,0" 
         VerticalAlignment="Top" 
-        ComponentName="420-22-CV1"/>
+        ComponentName="470-44-FT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1274,139,0,0" 
+            Margin="1308,61,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="420-23-CV1" RenderTransformOrigin="0.447,1.793"/>
+            ComponentName="471-21-CV1" RenderTransformOrigin="0.447,1.793"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1125,93,0,0" 
+            Margin="1177,64,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="420-DISCH"/>
+            ComponentName="371-41-WT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1177,183,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="371-ACS" RenderTransformOrigin="0.759,1.473"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1308,119,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="471-21-CV2" RenderTransformOrigin="0.447,1.793"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="1308,183,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="471-21-CV3" RenderTransformOrigin="0.447,1.793"/>
     </Grid>
 </UserControl>
