--- a/Prevu.Synoptics.V2451_Biffa/WH2.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH2.xaml
@@ -467,7 +467,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="307,634,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="371-22-CV2"/>
+            ComponentName="470-43-CT1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="121,540,0,0" VerticalAlignment="Top" Width="54" RenderTransformOrigin="0.497,0.467" Color="Vapor" StatusComponent="474-21-CV1"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="241,508,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="50" Height="70">
             <Machines:EXC_HeatExchanger.RenderTransform>
